# prophet-of-investing

./: .gitignore  config-example.yaml  config.yaml.example  pyproject.toml  shared.py  suggest-cryptos.py  suggest-stocks.py  suggest_cryptos.py  suggest_stocks.py
